2009-05-15	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/src/sysconf.c: Restructure to improve coverage analysis.

2009-05-15	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libcsupport/Makefile.am, libcsupport/src/printk.c: Restructure to
	make analysis and coverage easier. Now 100% covered.
	* libcsupport/src/vprintk.c: New file.

2009-05-13	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1411/cpukit
	* rtems/src/workspace.c, score/include/rtems/score/protectedheap.h,
	score/src/pheapgetfreeinfo.c, score/src/pheapgetinfo.c: Improve
	workspace wrapper methods.

2009-05-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/shell/login_prompt.c, libmisc/shell/shell_script.c,
	rtems/include/rtems/rtems/timer.h: Fix warnings.

2009-05-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	* posix/include/rtems/posix/psignal.h,
	rtems/inline/rtems/rtems/support.inl: Remove warnings.

2009-05-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sapi/include/rtems/config.h: Switch from ssize_t to uintptr_t for
	work space size since it is larger than a single allocatable object.

2009-05-08	Chris Johns <chrisj@rtems.org>

	* cpukit/libblock/src/bdpart.c, libmisc/shell/main_msdosfmt.c,
	libmisc/shell/main_rm.c, libnetworking/libc/gethostnamadr.c,
	score/include/rtems/score/bitfield.h,
	score/inline/rtems/score/priority.inl: Remove warnings.

2009-05-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/src/objectgetnext.c: Add checks for NULL pointers.

2009-05-07	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libnetworking/lib/ftpfs.c, libnetworking/rtems/ftpfs.h: Added
	timeouts.  Options are now per file system instance.

2009-05-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/uuid/gen_uuid.c, libnetworking/lib/syslog.c,
	telnetd/telnetd.c: Fixed warnings.

2009-05-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/Makefile.am:
	* libcsupport/src/isatty_r.c: New file.

2009-05-06	Sebastian Huber <sebastian.huber@embedded-brains.de>
