@@ -24,12 +24,20 @@ int setitimer(
   struct itimerval       *ovalue
 )
 {
+  if ( !value )
+    rtems_set_errno_and_return_minus_one( EFAULT );
+
+  if ( !ovalue )
+    rtems_set_errno_and_return_minus_one( EFAULT );
+
   switch ( which ) {
-    case ITIMER_REAL:  break;
-    case ITIMER_VIRTUAL: break;
-    case ITIMER_PROF: break;
+    case ITIMER_REAL:
+    case ITIMER_VIRTUAL:
+    case ITIMER_PROF:
+      rtems_set_errno_and_return_minus_one( ENOSYS );
+    default:
+      break;
   }
-  rtems_set_errno_and_return_minus_one( ENOSYS );
-  /* return -1; */
+  rtems_set_errno_and_return_minus_one( EINVAL );
 }
 
